objects/GoogleAPISettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Redirect_URL__c</fullName>
        <label>Redirect URL</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>GoogleAPISettings</label>
</CustomObject>